--- a/package.json
+++ b/package.json
@@ -14,8 +14,14 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "hbs": "^4.2.0",
+    "install": "^0.13.0",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.2",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "npm": "^9.8.1",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0"
   }
 }
